2016-11-06 S. Thiell <sthiell@stanford.edu>

	* cluset: add cluset command with doc to avoid a conflict with xCAT's
	nodeset command (ticket #300).

2016-10-12 All contributors

	* Change license from "CeCILL-C V1" to "LGPL v2.1 or later".

2016-10-04 S. Thiell <sthiell@stanford.edu>

	* setup.py: remove scripts/*; use console_scripts instead.

2016-10-02 S. Thiell <sthiell@stanford.edu>

	* Tree.py: in copy mode, do not send tar data to local targets, but only
	remote ones; this does fix broken pipe errors (ticket #319).

2016-06-18 S. Thiell <sthiell@stanford.edu>

	* Version 1.7.2 released.

2016-06-07 D. Martinet  <dominique.martinet@cea.fr>

	* Clush/Nodeset: add --pick N option (ticket #311).

2016-05-22 S. Thiell <sthiell@stanford.edu>

	* Tree.py: fix the tracking of gateway active targets (ticket #308).
	* EngineClient.py: handle broken pipe on write() (ticket #196).

2016-04-24 S. Thiell <sthiell@stanford.edu>

	* NodeSet.py: allow empty string as valid argument for empty NodeSet
	objects (ticket #294).

2016-02-28 S. Thiell <sthiell@stanford.edu>

	* Version 1.7.1 released.

2016-02-27 S. Thiell <sthiell@stanford.edu>

	* Worker/Tree.py: implement tree mode reverse copy using tar commands to
	fix clush --rcopy (ticket #290).

	* Communication.py: remove 76-char base64 encoding fixed length
	restriction for tree XML payload communication. The default max length is
	now 64K, which gives good results. The environment variable
	'CLUSTERSHELL_GW_B64_LINE_LENGTH' is propagated to gateways and may be
	used to override this value.

2016-02-12 S. Thiell <sthiell@stanford.edu>

	* RangeSet.py and NodeSet.py: fix bad 0-padding handling by RangeSetND or
	NodeSet objects in nD (ticket #286).

2016-02-09 S. Thiell <sthiell@stanford.edu>

	* NodeSet.py: fix parser issue when brackets were used with nodeset
	starting with a digit (ticket #284).

2015-11-30 S. Thiell <sthiell@stanford.edu>

	* CLI/Nodeset.py: fix --output-format / -O when folding (-f) by applying