@@ -133,8 +133,6 @@ class CLIClushTest_A(unittest.TestCase):
 
     def test_006_output_gathering(self):
         """test clush (output gathering)"""
-        self._clush_t(["-w", HOSTNAME, "-L", "echo", "ok"], None, \
-            "%s: ok\n" % HOSTNAME)
         self._clush_t(["-w", HOSTNAME, "-bL", "echo", "ok"], None, \
             "%s: ok\n" % HOSTNAME)
         self._clush_t(["-w", HOSTNAME, "-qbL", "echo", "ok"], None, \
@@ -489,6 +487,17 @@ class CLIClushTest_A(unittest.TestCase):
                       "echo foo"], None,
                       re.compile(r"^((localhost|%s): foo\n){2}$" % HOSTNAME))
 
+    def test_035_sorted_line_mode(self):
+        """test clush (sorted line mode -L)"""
+        self._clush_t(["-w", HOSTNAME, "-L", "echo", "ok"], None,
+                      "%s: ok\n" % HOSTNAME)
+
+        # Issue #326
+        cmd = 's=%h; n=${s//[!0-9]/}; if [[ $(expr $n %% 2) == 0 ]]; then ' \
+              'echo foo; else echo bar; fi'
+
+        self._clush_t(["-w", "cs[01-03]", "--worker=exec", "-L", cmd], None,
+                      'cs01: bar\ncs02: foo\ncs03: bar\n', 0)
 
 class CLIClushTest_B_StdinFailure(unittest.TestCase):
     """Unit test class for testing CLI/Clush.py and stdin failure"""
